welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: ')' expected but 'else' found.
  if ((a>=13 && a<=19) || (b>=13 && b<=19){return 19}else {return a+b}
                                                     ^